--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -1,3 +1,9 @@
+.service-container {
+  text-align: center;
+  border: 2px solid black;
+  margin: 30px;
+  padding: 20px;
+}
 .service-container img {
   width: 200px;
 }
