--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -3,3 +3,14 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
+
+@media only screen and (max-width: 576px) {
+  .all-service {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media only screen and (min-width: 577px) and (max-width: 1024px) {
+  .all-service {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
